--- a/src/app/free-card/free-card.component.html
+++ b/src/app/free-card/free-card.component.html
@@ -1,8 +1,6 @@
 <div class="card">
-  <img src="assets/img/girl-g8e84bf231_640.jpg">
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut soluta dolore architecto
-    laudantium explicabo iusto debitis?</p>
-
+  <img src="{{ img }}">
+  <p>{{ text }}</p>
   <button>like</button>
   <button>Nachricht</button>
 </div>
